ISP20221386 - 新增每日Moisture 檢測功能

--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -282,6 +282,16 @@
                                                 Article = item.Article,
                                             });
                                             break;
+                                        case string a when a.Contains("Bulk Moisture"):
+                                            link = Url.Action("IndexGet", "DailyMoisture", new
+                                            {
+                                                ReportNo = item.ReportNo,
+                                                BrandID = item.BrandID,
+                                                SeasonID = item.SeasonID,
+                                                StyleID = item.StyleID,
+                                                OrderID = item.OrderID,
+                                            });
+                                            break;
                                         default:
                                             link = "#";
                                             break;
