--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
@@ -60,6 +60,7 @@
 <header>
     <h3 style="width:85%;float:left;margin:0"></h3>
     <input id="btnExit" type="button" value="Exit" />
+    <h3 id="picStatus" style="width: 25%;float: right;margin: 0;">Upload Status : Loading</h3>
 </header>
 <br />
 <div class="outerDiv" style="margin-right:2%;overflow-y:scroll;">
@@ -137,6 +138,7 @@
     var ID_List = [];
     var Name_List = [];
     $(function () {
+        $('#picStatus').hide();
 
         // Screenshot Exit
         $('#btnScreenshotExit').on('click', function () {
@@ -149,8 +151,9 @@
         });
 
         $("#Del").click(function () {
-            // 取得要刪除的Seq
+            $('#picStatus').html('Upload Status : Loading').fadeIn();
 
+            // 取得要刪除的Seq
             var selectedID = $("#ImageList").val()
 
             var sel = $("#ImageList")[0];
@@ -172,9 +175,9 @@
                 data: JSON.stringify({ data: data, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                 async: true,
                 success: function (data) {
+                    $('#picStatus').html('Upload Status : Pass').delay(3000).fadeOut();
 
                     // 後端加入成功之後，前端下拉選單、對應圖片也要更新
-
                     var dropDownList = JSON.parse(data[0]);
                     var ImageList = JSON.parse(data[1]);
 
@@ -194,6 +197,7 @@
                     });
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
+                    $('#picStatus').html('Upload Status : Fail').delay(3000).fadeOut();
                     console.log(xhr.responseText);
                 }
             });
@@ -211,6 +215,7 @@
         });
 
         $("#UploadPic").change(async function () {
+            $('#picStatus').html('Upload Status : Loading').fadeIn();
 
             var length = UploadPic.files.length;
 
@@ -246,9 +251,9 @@
                     data: JSON.stringify({ list: PictureList, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                     async: true,
                     success: function (data) {
+                        $('#picStatus').html('Upload Status : Pass').delay(3000).fadeOut();
 
                         // 後端加入成功之後，前端下拉選單、對應圖片也要更新
-
                         var dropDownList = JSON.parse(data[0]);
                         var ImageList = JSON.parse(data[1]);
 
@@ -268,6 +273,7 @@
                         });
                     },
                     error: function (xhr, ajaxOptions, thrownError) {
+                        $('#picStatus').html('Upload Status : Fail').delay(3000).fadeOut();
                         console.log(xhr.responseText);
                     }
                 });
