--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/BAPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/BAPicture.cshtml
@@ -60,6 +60,7 @@
 <header>
     <h3 style="width:85%;float:left;margin:0"></h3>
     <input id="btnExit" type="button" value="Exit" />
+    <h3 id="picStatus" style="width: 25%;float: right;margin: 0;">Upload Status : Loading</h3>
 </header>
 <br />
 <div class="outerDiv" style="margin-right:2%;overflow-y:scroll;">
@@ -133,6 +134,7 @@
     var ID_List = [];
     var Name_List = [];
     $(function () {
+        $('#picStatus').hide();
 
         // Screenshot Exit
         $('#btnScreenshotExit').on('click', function () {
@@ -145,8 +147,9 @@
         });
 
         $("#Del").click(function () {
-            // 取得要刪除的Seq
+            $('#picStatus').html('Upload Status : Loading').fadeIn();
 
+            // 取得要刪除的Seq
             var selectedID = $("#ImageList").val()
 
             var sel = $("#ImageList")[0];
@@ -168,9 +171,9 @@
                 data: JSON.stringify({ data: data, BAUKey: '@Model.Ukey', ID: '@Model.ID', BACriteria: '@Model.BACriteria' }),
                 async: true,
                 success: function (data) {
-                    
-                    // 後端加入成功之後，前端下拉選單、對應圖片也要更新
+                    $('#picStatus').html('Upload Status : Pass').delay(3000).fadeOut();
 
+                    // 後端加入成功之後，前端下拉選單、對應圖片也要更新
                     var dropDownList = JSON.parse(data[0]);
                     var ImageList = JSON.parse(data[1]);
 
@@ -190,6 +193,7 @@
                     });
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
+                    $('#picStatus').html('Upload Status : Fail').delay(3000).fadeOut();
                     console.log(xhr.responseText);
                 }
             });
@@ -207,6 +211,7 @@
         });
 
         $("#UploadPic").change(async function () {
+            $('#picStatus').html('Upload Status : Loading').fadeIn();
 
             var length = UploadPic.files.length;
 
@@ -242,9 +247,9 @@
                     data: JSON.stringify({ list: PictureList, BAUKey: '@Model.Ukey', ID: '@Model.ID', BACriteria: '@Model.BACriteria' }),
                     async: true,
                     success: function (data) {
-                        
-                        // 後端加入成功之後，前端下拉選單、對應圖片也要更新
+                        $('#picStatus').html('Upload Status : Pass').delay(3000).fadeOut();
 
+                        // 後端加入成功之後，前端下拉選單、對應圖片也要更新
                         var dropDownList = JSON.parse(data[0]);
                         var ImageList = JSON.parse(data[1]);
 
@@ -264,6 +269,7 @@
                         });
                     },
                     error: function (xhr, ajaxOptions, thrownError) {
+                        $('#picStatus').html('Upload Status : Fail').delay(3000).fadeOut();
                         console.log(xhr.responseText);
                     }
                 });
