--- a/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_BA.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_BA.cshtml
@@ -143,6 +143,7 @@
     }
 
     function AddToTemp(ImgID) {
+        $('#picStatus').html('Upload Status : Loading').fadeIn();
 
         const imgSet = document.querySelector("#" + ImgID);
 
@@ -160,9 +161,9 @@
             data: JSON.stringify({ data: data, BAUKey: '@Model.Ukey', ID: '@Model.ID', BACriteria: '@Model.BACriteria' }),
             async: true,
             success: function (data) {
+                $('#picStatus').html('Upload Status : Pass').delay(3000).fadeOut();
 
                 // 後端加入成功之後，前端下拉選單、對應圖片也要更新
-
                 var dropDownList = JSON.parse(data[0]);
                 var ImageList = JSON.parse(data[1]);
 
@@ -182,6 +183,7 @@
                 });
             },
             error: function (xhr, ajaxOptions, thrownError) {
+                $('#picStatus').html('Upload Status : Fail').delay(3000).fadeOut();
                 console.log(xhr.responseText);
             }
         });
