--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -168,11 +168,11 @@
         <header class="page-header">
             <div style="float:left">
                 <h3>
-                    <span>Daily HT Wash Test</span>
+                    <span>Daily Moisture Test</span>
                 </h3>
                 <div class="breadcrumb">
                     <div>Home</div>
-                    <div class="current">Daily HT Wash Test</div>
+                    <div class="current">Daily Moisture Test</div>
                 </div>
             </div>
             <div class="breadcrumb queryHeader" style="justify-content: flex-end;">
