ISP20221523 - [DailyMoisture] 增加必填欄位[Instrument]

--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -979,6 +979,10 @@
                 ErrMsg += "SP# cannot be empty<br/>";
             }
 
+            if ($('#Main_Instrument').val() == '' || $('#Main_Instrument').val() == undefined) {
+                ErrMsg += "Detection Instrument cannot be empty<br/>";
+            }
+
             if (ErrMsg != "") {
                 msg.WithError(ErrMsg);
                 return false;
